--- a/WKVCDeallocManagerDemo/WKVCDeallocManagerDemo/VCDeallocMonitor/WKVCDeallocCell.xib
+++ b/WKVCDeallocManagerDemo/WKVCDeallocManagerDemo/VCDeallocMonitor/WKVCDeallocCell.xib
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,12 +21,12 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hhT-qG-b82">
                         <rect key="frame" x="20" y="5" width="75" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="100" id="4J3-qT-mAM"/>
+                            <constraint firstAttribute="height" constant="100" id="DIU-A4-gbT"/>
                             <constraint firstAttribute="width" constant="75" id="bZJ-xb-UgO"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p5S-zP-pAJ">
-                        <rect key="frame" x="110" y="25" width="174" height="18"/>
+                        <rect key="frame" x="110" y="25" width="37.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -50,15 +49,14 @@
                 <constraints>
                     <constraint firstItem="hhT-qG-b82" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="1e5-GG-8Vk"/>
                     <constraint firstItem="p5S-zP-pAJ" firstAttribute="leading" secondItem="hhT-qG-b82" secondAttribute="trailing" constant="15" id="83u-6t-qeO"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="p5S-zP-pAJ" secondAttribute="trailing" constant="20" id="C4E-Z7-c0f"/>
                     <constraint firstItem="T4f-Ea-xE1" firstAttribute="bottom" secondItem="hhT-qG-b82" secondAttribute="bottom" constant="-20" id="NGe-Ah-9FV"/>
+                    <constraint firstItem="hhT-qG-b82" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="SJU-jB-ZRp"/>
                     <constraint firstItem="T4f-Ea-xE1" firstAttribute="leading" secondItem="hhT-qG-b82" secondAttribute="trailing" constant="15" id="Tpy-89-aKn"/>
                     <constraint firstItem="hhT-qG-b82" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="VF5-Gu-Fk1"/>
                     <constraint firstItem="uln-TM-Pgh" firstAttribute="centerY" secondItem="hhT-qG-b82" secondAttribute="centerY" id="dF0-Xk-amj"/>
                     <constraint firstItem="p5S-zP-pAJ" firstAttribute="top" secondItem="hhT-qG-b82" secondAttribute="top" constant="20" id="gqQ-U6-5bV"/>
+                    <constraint firstAttribute="bottom" secondItem="hhT-qG-b82" secondAttribute="bottom" constant="4.5" id="lic-oC-f2J"/>
                     <constraint firstAttribute="trailing" secondItem="uln-TM-Pgh" secondAttribute="trailing" constant="20" id="oc6-pq-6RQ"/>
-                    <constraint firstItem="hhT-qG-b82" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="q5E-3l-aCJ"/>
-                    <constraint firstAttribute="bottom" secondItem="hhT-qG-b82" secondAttribute="bottom" constant="4.5" id="wwD-Hy-QaF"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
